--- a/app/views/client/recipes/show.html.erb
+++ b/app/views/client/recipes/show.html.erb
@@ -1,5 +1,3 @@
-<a href="/client/recipes">Home</a>
-
 <h1><%= @recipe["title"] %></h1>
 <h3>Chef: <%= @recipe["chef"] %></h3>
 <h5>Prep Time: <%= @recipe["formatted"]["prep_time"] %></h5>
@@ -19,5 +17,10 @@
   <% end %>
 </ol>
 
-<img src="<%= @recipe["image_url"] %>" alt="<%= @recipe["title"] %>"/>
+<div>
+  <a href="/client/recipes/<%= @recipe['id'] %>/edit">Edit Recipe</a>
+  <a href="/client/recipes/<%= @recipe['id'] %>" data-method="delete">Delete Recipe</a>
+</div>
+
+<img src="<%= @recipe["image_url"] %>" alt="<%= @recipe["title"] %>">
 
