added bootstrap front end

--- a/app/views/client/recipes/index.html.erb
+++ b/app/views/client/recipes/index.html.erb
@@ -1,6 +1,19 @@
-<% @recipes.each do |recipe| %>
-  <h1><a href="/client/recipes/<%= recipe["id"] %>"><%= recipe["title"] %></a></h1>
-  <h5>Prep Time: <%= recipe["prep_time"] %></h5>
-  <p>Ingredients: <%= recipe["ingredients"] %></p>
-  <p>Directions: <%= recipe["directions"] %></p>
-<% end %>
+<div class="row">
+  <% @recipes.each do |recipe| %>
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="<%= recipe["image_url"] %>" class="card-img-top" alt="<%= recipe["title"] %>">
+        <div class="card-body">
+          <h5 class="card-title"><a href="/client/recipes/<%= recipe["id"] %>"><%= recipe["title"] %></a></h5>
+          <p class="card-text">Prep Time: <%= recipe["formatted"]["prep_time"] %></p>
+          <p class="card-text">Ingredients:</p>
+          <ul>
+            <% recipe["formatted"]["ingredients"].each do |ingredient| %>
+              <li><%= ingredient %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div> 
+    </div> 
+  <% end %>
+</div>
