--- a/app/views/client/recipes/new.html.erb
+++ b/app/views/client/recipes/new.html.erb
@@ -1,22 +1,34 @@
-<h1>New Recipe Form</h1>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h1>New Recipe Form</h1>
 
-<!-- <form action="/client/recipes" method="post">  -->
-<%= form_tag "/client/recipes", method: :post do %>
-  <div>
-    Title: <input type="text" name="title">
+    <%= form_tag "/client/recipes", method: :post do %>
+      <div class="form-group">
+        <label for="inputTitle">Title:</label>
+        <input type="text" class="form-control" id="inputTitle" placeholder="Title" name="title">
+      </div>
+
+      <div class="form-group">
+        <label for="inputTitle">Prep Time:</label>
+        <input type="text" class="form-control" id="inputPrepTime" placeholder="Prep Time" name="prep_time">
+      </div>
+
+      <div class="form-group">
+        <label for="inputIngredients">Ingredients:</label>
+        <input type="text" class="form-control" id="inputIngredients" placeholder="Ingredients" name="ingredients">
+      </div>
+
+      <div class="form-group">
+        <label for="inputDirections">Directions:</label>
+        <input type="text" class="form-control" id="inputDirections" placeholder="Directions" name="directions">
+      </div>
+
+      <div class="form-group">
+        <label for="inputImageUrl">Image URL:</label>
+        <input type="text" class="form-control" id="inputImageUrl" placeholder="Image URL" name="image_url">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Create Recipe</button>
+    <% end %>
   </div>
-  <div>
-    Prep Time: <input type="text" name="prep_time">
-  </div>
-  <div>
-    Ingredients: <input type="text" name="ingredients">
-  </div>
-  <div>
-    Directions: <input type="text" name="directions">
-  </div>
-  <div>
-    Image URL: <input type="text" name="image_url">
-  </div>
-  <input type="submit" value="Create Recipe">
-<% end %>
-<!-- </form> -->
+</div>
